Arrow wrap fix

--- a/sgem-home-equity-loan-calculator/assets/css/hel-cal-calculator.css
+++ b/sgem-home-equity-loan-calculator/assets/css/hel-cal-calculator.css
@@ -737,14 +737,14 @@
    font-size: 16px;
    cursor: pointer;
    color: #474747;    
-	display: inline-block;
-	padding-right: 25px;
+	display: inline-block;	
+	white-space: nowrap
 }
 
 
 
 details.sgem-hel-details-disclaimer > summary::after {
-   content: " ";
+   content: "";
    width: 25px;
    height: 24px;
    display: inline-block;
@@ -753,8 +753,7 @@ details.sgem-hel-details-disclaimer > summary::after {
    background-position: center -2px;   
    background-image: url(../images/drop-down-arrow-hel.svg);
    margin-top: 2px;
-   /*margin-left: 2px;*/
-    margin-right: -25px;
+   margin-left: 2px;   
    transition: transform 0.3s;
 }
 details.sgem-hel-details-disclaimer[open] > summary::after {
